# serializer version: 1
# name: test_adam_water_heater_snapshot[platforms0][water_heater.opentherm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max_temp': 60.0,
      'min_temp': 40.0,
      'operation_list': list([
        'Dhw comfort',
        'Dhw normal',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.opentherm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'e4684553153b44afbef2200885f379dc-water_heater',
    'unit_of_measurement': None,
  })
# ---
# name: test_adam_water_heater_snapshot[platforms0][water_heater.opentherm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 37.3,
      'friendly_name': 'OpenTherm',
      'max_temp': 60.0,
      'min_temp': 40.0,
      'operation_list': list([
        'Dhw comfort',
        'Dhw normal',
      ]),
      'operation_mode': 'Dhw normal',
      'supported_features': <WaterHeaterEntityFeature: 3>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': 60.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.opentherm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Dhw normal',
  })
# ---
# name: test_anna_water_heater_snapshot[platforms0-False-anna_v4_dhw][water_heater.opentherm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max_temp': 60.0,
      'min_temp': 30.0,
      'operation_list': list([
        'Dhw comfort',
        'Dhw normal',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.opentherm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'cd0e6156b1f04d5f952349ffbe397481-water_heater',
    'unit_of_measurement': None,
  })
# ---
# name: test_anna_water_heater_snapshot[platforms0-False-anna_v4_dhw][water_heater.opentherm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 45.0,
      'friendly_name': 'OpenTherm',
      'max_temp': 60.0,
      'min_temp': 30.0,
      'operation_list': list([
        'Dhw comfort',
        'Dhw normal',
      ]),
      'operation_mode': 'Dhw comfort',
      'supported_features': <WaterHeaterEntityFeature: 3>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': 60.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.opentherm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Dhw comfort',
  })
# ---
